--- a/centralizedMail.html
+++ b/centralizedMail.html
@@ -121,7 +121,11 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           This was a long running case with Microsoft Support but out of it at least came information on no longer using legacy mail filters. 
           I kinda think if a feature is no longer to be used then really it should also be removed from the GUI and not hidden deep in the documentation, but in the end the issue did at least get resolved. 
 	  I recommend running the <a href='https://github.com/cammurray/orca'>ORCA</a> PowerShell report to keep track of all best practices for O365 mail-flow.<br>
-          <br><br> 
+             <br>
+	<img src='centralizedMail03.png' class=ImageMain>
+		<div class=ImageCaption>↑ SPF record: hard fail should not be enabled under <a href='https://security.microsoft.com/'>M365 Defender</a> > Policies & Rules > Threat Policies > Anti-spam Policies.</div>
+          <br>	
+		<br><br> 
            
            
           </div>
