--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -118,7 +118,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
             <tr><td>Sep 2019</td><td>Advisory on O365 mail-flow</td><td>Advice given.</td></tr>
             <tr><td>Oct 2019</td><td>Image in email from Notes gave warning.</td><td>Set the image size and this resolved the error.</td></tr>
             <tr><td>Feb 2020</td><td>Mail-flow to shared mailboxes not working.</td><td>Shared mailboxes were not synced to Azure AD correctly.</td></tr>
-            <tr><td>Feb 2020</td><td>Teams calendar not showing.</td><td>Enabled OAuth in envrionment.</td></tr>
+            <tr><td>Feb 2020</td><td>Teams calendar not showing.</td><td>Enabled OAuth in environment.</td></tr>
             <tr><td>Feb 2020</td><td>Group and Mail Contact errors.</td><td>Enabled AAD writeback.</td></tr>
             <tr><td>Feb 2020</td><td>Exchange update broke IIS.</td><td>Fixed IIS directories.</td></tr>
 	    <tr><td>Mar 2020</td><td>Hybrid setup with NetScaler failing.</td><td>Removed SSL offloading, used SSL bridge mode instead.</td></tr>
