--- a/delegateSentItems.html
+++ b/delegateSentItems.html
@@ -101,7 +101,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<div class=ImageCaption>↑ Mails are forwarded to an external mailbox.</div>
 	<br>	
           <b>Cause</b><br>
-          This 'functionality' has been <a href='https://www.michev.info/Blog/Post/1947/messagecopy-settings-and-forwarding'> described before</a> where sent items would appear for members of a distribution group if the delegee automatically forwarded to that group. But even then it was still a big surprise to learn this would work across domains. The forwarded exrternal mailbox also resides in O365, and possibly in the same datacenter, so that may explain why it occurred, though I never got an opportunity to test all scenarios. Assuming Microsoft classify it as a bug then it doesn't look like it will be patched anytime soon.<br>
+          This 'functionality' has been <a href='https://www.michev.info/Blog/Post/1947/messagecopy-settings-and-forwarding'> described before</a> where sent items would appear for members of a distribution group if the delegee automatically forwarded to that group. But even then it was still a big surprise to learn this would work across domains. The forwarded external mailbox also resides in O365, and possibly in the same datacenter, so that may explain why it occurred, though I never got an opportunity to test all scenarios. Assuming Microsoft classify it as a bug then it doesn't look like it will be patched anytime soon.<br>
           <br>
           <b>Resolution</b><br>
           There seemed to be 3 options, 1 accept this was the functionality, 2 disable the save sent items option, 3 use webmail to directly logon to the delegee's mailbox and send from there. For a few reasons it was decided option 3 would be best.<br>
