--- a/teamsFile.html
+++ b/teamsFile.html
@@ -95,9 +95,12 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=datestamp>21-Mar-23</div>
         <div class=content><br>
          A user reported an issue where they had to reload the Teams files tab each time they wanted to open a certain file. 
-          We did some checking regarding the Sharepoint site and although the Team and site were setup correctly , the owners of the Team had added subfolders that contained the '&' character. 
-          The owner had been told to avoid special characters but as usual this was quickly forgotten. Note that the '&' character was not in the file name itself, but because it was in a subfolder with a '&' character this contributed to the full path.
-          <img src='teamsFile01.png'><div class=imageCaption>Error when the OneDrive <b>full</b> path contains a '&' character.</div>
+          We did some checking regarding the Sharepoint site and although the Team and site were setup correctly , the owners of the Team had added subfolders that contained the '&' character.<br> 
+          <br>
+	The owner had been told to avoid special characters but as usual this was quickly forgotten. Note that the '&' character was not in the file name itself, but because it was in a subfolder with a '&' character this contributed to the full path.<br>
+	<br>
+          <img src='teamsFile01.png' class=ImageMain><br>
+	<div class=imageCaption>Error when the OneDrive <b>full</b> path contains a '&' character.</div>
           <br><br> 
            
            
