--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	<a href="teamsRoom.html" class=two>Teams not showing Rooms</a><br>
 	<a href="teamsFile.html" class=two>Teams unable to open file</a><br>
 	<a href="reviewQuarantine.html" class=two>Unable to review quarantined mails for shared mailbox</a><br>
 	<a href="setLocale.html" class=two>Set Locale for various Apps</a><br>
