--- a/teamsRoom.html
+++ b/teamsRoom.html
@@ -97,11 +97,11 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
           <b>Issue:</b> when we go to make a new meeting within the Teams client we find that no rooms are visible. Additionally we can only add a Room as an attendee by entering the full email address, there is no address suggestion displayed.<br>
           <br>
-          <img src=teamsRoom01.png class=imageMain>Error message: No rooms found. Try another name or room list.<br>
+          <img src=teamsRoom01.png class=imageMain><div class=imageCaption>Error message: No rooms found. Try another name or room list.</div><br>
           <br>
           The Rooms List, which works fine in Outlook, also shows no rooms within Teams. If we try to add a migrated Team to a Rooms List we get an error: Only room mailbox or room list can be added into room list.<br>
           <br>
-          <img src=teamsRoom02.png class=imageMain>Unable to add an O365 Room mailbox from on-prem Exchange PowerShell.<br>
+          <img src=teamsRoom02.png class=imageMain><div class=imageCaption>Unable to add an O365 Room mailbox from on-prem Exchange PowerShell.</div><br>
           <br>
           <b>Troubleshooting:</b> when a mailbox (or Room) is migrated to O365 then the object on-prem becomes a remote user with a class of user. So this would explain why there is an error but so far I've found no resolution to adding the object to the room list.<br>
 		<br>
