--- a/teamsRoom.html
+++ b/teamsRoom.html
@@ -105,7 +105,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
           <b>Troubleshooting:</b> when a mailbox (or Room) is migrated to O365 then the object on-prem becomes a remote mail with a class of mail user. So this would explain why there is an error but so far I've found no resolution to adding the object to the room list.<br>
 		<br>
-		For the issue with the rooms not displaying in the Location field in Teams I have tried adding additional information to the mailbox using on-prem commands that will sync to O365 fully after about 24 hours. Despite this the rooms still do not appear.<br>
+		For the issue with the rooms not displaying in the Location field in Teams I have tried adding <a href='https://learn.microsoft.com/en-us/powershell/module/exchange/set-place?view=exchange-ps'>additional information</a> to the mailbox using on-prem commands that will sync to O365 fully after about 24 hours. Despite this the rooms still do not appear.<br>
 		<br>
 		While researching this issue I did not find anyone with the same problems, so decided to open a support call with Microsoft, which is currently ongoing.<br>
 		<br>
