--- a/teamsRoom.html
+++ b/teamsRoom.html
@@ -99,7 +99,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
           <img src=teamsRoom01.png class=imageMain><div class=imageCaption>↑ Error message: No rooms found. Try another name or room list.</div><br>
           <br>
-          The Rooms List, which works fine in Outlook, also shows no rooms within Teams. If we try to add a migrated Team to a Rooms List we get an error: Only room mailbox or room list can be added into room list.<br>
+          The Rooms List, which works fine in Outlook, also shows no rooms within Teams. If we try to add a migrated room to a Rooms List we get an error: Only room mailbox or room list can be added into room list.<br>
           <br>
           <img src=teamsRoom02.png class=imageMain><div class=imageCaption>↑ Unable to add an O365 Room mailbox from on-prem Exchange PowerShell.</div><br>
           <br>
