--- a/teamsRoom.html
+++ b/teamsRoom.html
@@ -107,7 +107,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	To fix this we need to use some PowerShell:<br>
 		<div class=code>set-remoteMailbox -type Room</div><br>	
           <br>
-	<img src=teamsRoom04.png class=imageMain><div class=imageCaption>↑ Now we see the mailbox is the correct type - Room.</div><br>
+	<img src=teamsRoom04.png class=imageMain><div class=imageCaption>↑ Now we see the mailbox is the correct type - Room. We can now add the room to the Room List without error.</div><br>
 	<br>
 	If like me you have a number of rooms to check then you should create a script that returns the mailbox type for all room mailboxes.<br>
 	<br>
