--- a/teamsRoom.html
+++ b/teamsRoom.html
@@ -97,11 +97,15 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=headline>Teams not showing Rooms</div>
 	      <div class=datestamp>25-Mar-23</div>
         <div class=content><br>
-	<b>Problem 1:</b> when we try to add an O365 Room to a Room List we get an error: Only room mailbox or room list can be added into room list.<br>
+	<b>Problem:</b> when we try to add an O365 Room to a Room List we get an error: Only room mailbox or room list can be added into room list.<br>
           <br>
  	<img src=teamsRoom02.png class=imageMain><div class=imageCaption>↑ Unable to add an O365 Room mailbox from on-prem Exchange PowerShell.</div><br>
           <br>
-        After researching this error it seems that some room mailboxes can get get migrated as user mailboxes, all the more likely when the Room was setup for a Crestron device. To check if this is the case we run the get-remotemailbox command.<br>
+	In addition when we go to make a new meeting within the Teams client we find that no rooms are visible. Additionally we can only add a Room as an attendee by entering the full email address, there is no address suggestion displayed.<br>
+	<br>
+	<img src=teamsRoom01.png class=imageMain><div class=imageCaption>↑ Error message: No rooms found. Try another name or room list.</div><br>
+		<br>
+		<b>Resolution:</b> after researching this error it seems that some room mailboxes can get get migrated as user mailboxes, all the more likely when the Room was setup for a Crestron device. To check if this is the case we run the get-remotemailbox command.<br>
 	<br>
 	<img src=teamsRoom03.png class=imageMain><div class=imageCaption>↑ Here we see the Room mailbox is actually set as a User mailbox.</div><br>
 	To fix this we need to use some PowerShell:<br>
@@ -110,14 +114,6 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<img src=teamsRoom04.png class=imageMain><div class=imageCaption>↑ Now we see the mailbox is the correct type - Room. We can now add the room to the Room List without error.</div><br>
 	<br>
 	If like me you have a number of rooms to check then you should create a script that returns the mailbox type for all room mailboxes.<br>
-	<br>
-          <b>Problem 2:</b> when we go to make a new meeting within the Teams client we find that no rooms are visible. Additionally we can only add a Room as an attendee by entering the full email address, there is no address suggestion displayed.<br>
-	<br>
-	<img src=teamsRoom01.png class=imageMain><div class=imageCaption>↑ Error message: No rooms found. Try another name or room list.</div><br>
-	<br>
-	For the issue with the rooms not displaying in the Location field in Teams I have tried adding <a href='https://learn.microsoft.com/en-us/powershell/module/exchange/set-place?view=exchange-ps'>additional information</a> to the mailbox using on-prem commands that will sync to O365 fully after about 24 hours. Despite this the rooms still do not appear.<br>
-	I am still working on a resolution to this problem.<br>
-	<br>
           <br><br> 
            
            
