--- a/teamsRoom.html
+++ b/teamsRoom.html
@@ -113,6 +113,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
 	<img src=teamsRoom04.png class=imageMain><div class=imageCaption>↑ Now we see the mailbox is the correct type - Room. We can now add the room to the Room List without error.</div><br>
 	<br>
+	<br>
+	<img src=teamsRoom05.png class=imageMain><div class=imageCaption>↑ Rooms can now be seen in the 'Location' field in Teams.</div><br>
+	<br>
 	If like me you have a number of rooms to check then you should create a script that returns the mailbox type for all room mailboxes.<br>
           <br><br> 
            
