--- a/teamsRoom.html
+++ b/teamsRoom.html
@@ -70,6 +70,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	<a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a><br>
 	<a href="teamsRoom.html" class=two>Teams not showing Rooms</a><br>
 	<a href="teamsFile.html" class=two>Teams unable to open file</a><br>
 	<a href="reviewQuarantine.html" class=two>Unable to review quarantined mails for shared mailbox</a><br>
