--- a/roomFinderError.html
+++ b/roomFinderError.html
@@ -111,6 +111,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
 	<img src=roomFinderError02.png class=imageMain><div class=imageCaption>↑ Room Finder visible after WebView2 reinstall.</div><br>
           <br>	
+	What was annoying about this was not everyone had the error so I wasn't going to push out a fix via SCCM to everyone if it wasn't needed. But there seems no way to check remotely if Room Finder is broken or to test WebView2.
           <br><br> 
            
            
