--- a/index.html
+++ b/index.html
@@ -93,8 +93,30 @@ a.two:hover {color: #447EAE; text-decoration: none;}
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
      
-        <div class=headline>Cleaning up your Windows DNS server</div>
-	      <div class=datestamp>07-Mar-23</div>
+	      
+	      <div class=headline>Articles</div>
+	      <table>
+	<tr><td><a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a></td><td>25-Mar-23</td></tr>
+	<tr><td><a href="teamsRoom.html" class=two>Teams not showing Rooms</a></td><td>21-Mar-23</td></tr>
+	<tr><td><a href="teamsFile.html" class=two>Teams unable to open file</a></td><td>13-Mar-23</td></tr>
+	<tr><td><a href="reviewQuarantine.html" class=two>Unable to review quarantined mails for shared mailbox</a></td><td>13-Mar-23</td></tr>
+	<tr><td><a href="setLocale.html" class=two>Set Locale for various Apps</a></td><td>12-Mar-23</td></tr>
+	<tr><td><a href="delegateSentItems.html" class=two>Delegate Sent Items placed into external Tenant</a></td><td>12-Mar-23</td></tr>
+	<tr><td><a href="microsoftSupport.html" class=two>Overview of Microsoft Support cases</a></td><td>11-Mar-23</td></tr>
+	<tr><td><a href="centralizedMail.html" class=two>When centralized mail sends via O365</a></td><td>11-Mar-23</td></tr>
+  	<tr><td><a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a></td><td>08-Mar-23</td></tr>
+	<tr><td><a href="o365migration.html" class=two>O365 Migration Tips</a></td><td>08-Mar-23</td></tr>
+	<tr><td><a href="o365reporting.html" class=two>Reporting on successful Azure logons</a></td><td>06-Mar-23</td></tr>
+	<tr><td><a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a></td><td>02-Mar-23</td></tr>
+        <tr><td><a href="o365cert.html" class=two>Secure Office365 reports with a certificate</a></td><td>02-Mar-23</td></tr>
+        <tr><td><a href="graphMail.html" class=two>Using Graph to send emails with inline images</a></td><td>02-Mar-23</td></tr>
+        <tr><td><a href="charts.html" class=two>Visualizing Graph data with Google Charts</a></td><td>02-Mar-23</td></tr>
+        <tr><td><a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a></td><td>02-Mar-23</td></tr>
+        <tr><td><a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a></td><td>01-Mar-23</td></tr>      
+	      </table>
+	      <br><br>
+        <div class=headline>Featured Article - Cleaning up your Windows DNS server</div>
+	      <div class=datestamp>01-Mar-23</div>
         <div class=content><br>
           Having contracted at a number of companies over the years I've seen my fair share of horror shows with regards DNS. For something so simple it really does have a lot of importance and should be regularly reviewed.<br>
 		<br>
