--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
+	.indexTable td { font-family:verdana; font-size:12px; color:#564c4d; }
 	    
       </style>
     
