--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
      
 	      
 	      <div class=headline>Articles</div>
-	      <table>
+	      <table class=indexTable>
 	<tr><td><a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a></td><td>28-Mar-23</td></tr>
 	<tr><td><a href="teamsRoom.html" class=two>Teams not showing Rooms</a></td><td>25-Mar-23</td></tr>
 	<tr><td><a href="teamsFile.html" class=two>Teams unable to open file</a></td><td>21-Mar-23</td></tr>
