--- a/sensitivityLabelError.html
+++ b/sensitivityLabelError.html
@@ -102,7 +102,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <br>
  	<img src=sensitivityLabelError01.png class=imageMain><div class=imageCaption>↑ We enable the Sensitivity button in the Outlook menu but it remains greyed out.</div><br>
           <br>
-
+ 	<img src=sensitivityLabelError02.png class=imageMain><div class=imageCaption>↑ In OWA we see that our labels are published successfully.</div><br>
+          <br>
          <br><br>
            
           </div>
