--- a/sensitivityLabelError.html
+++ b/sensitivityLabelError.html
@@ -98,9 +98,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=headline>Sensitivity Label not shown in Outlook Client</div>
 	      <div class=datestamp>29-Mar-23</div>
         <div class=content><br>
-	<b>Problem:</b> we publish sensitivty labels and they are viewable in OWA, but in Outlook and other Office apps the labels are not shown.<br>
+	<b>Problem:</b> we publish sensitivity labels and they are viewable in OWA, but in Outlook and other Office apps the labels are not shown.<br>
   <br>
- 	<img src=sensitivityLabelError01.png class=imageMain><div class=imageCaption>↑ We enable the Sensitivity button in the Outlook menu but it remains greyed out.</div><br>
+ 	<img src=sensitivityLabelError01.png class=imageMain><div class=imageCaption>↑ We enable the Sensitivity button in the Outlook menu but it remains greyed out.</div>
           <br>
  	<img src=sensitivityLabelError02.png class=imageMain><div class=imageCaption>↑ In OWA we see that our labels are published successfully.</div><br>
           <br>
