--- a/sensitivityLabelError.html
+++ b/sensitivityLabelError.html
@@ -104,6 +104,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
  	<img src=sensitivityLabelError02.png class=imageMain><div class=imageCaption>↑ In OWA we see that our labels are published successfully.</div><br>
           <br>
+		Additionally the labels are present if we install the legacy Azure Information Protection (AIP) add-in, but as that will be phased out there didn't seem much point in using this as a workaround.<br>
+		
          <br><br>
            
           </div>
