--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
-	<a href="compliancePowershell.html" class=two>How to connect to Compliance PowerShell behind a Proxy</a><br>
+	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
 	<a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a><br>
 	<a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a><br>
 	<a href="teamsRoom.html" class=two>Teams not showing Rooms</a><br>
@@ -99,7 +99,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      
 	      <div class=headline>Articles</div>
 	      <table class=indexTable>
-	<tr><td><a href="compliancePowershell.html" class=two>How to connect to Compliance PowerShell behind a Proxy</a></td><td>31-Mar-23</td></tr>
+	<tr><td><a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a></td><td>31-Mar-23</td></tr>
 	<tr><td><a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a></td><td>29-Mar-23</td></tr>
 	<tr><td><a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a></td><td>28-Mar-23</td></tr>
 	<tr><td><a href="teamsRoom.html" class=two>Teams not showing Rooms</a></td><td>25-Mar-23</td></tr>
