--- a/compliancePowershell.html
+++ b/compliancePowershell.html
@@ -70,7 +70,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
-	<a href="compliancePowershell.html" class=two>How to connect to Compliance PowerShell behind a Proxy</a><br>
+	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
    <a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a><br>
 	<a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a><br>
 	<a href="teamsRoom.html" class=two>Teams not showing Rooms</a><br>
