--- a/compliancePowershell.html
+++ b/compliancePowershell.html
@@ -96,7 +96,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
      
-        <div class=headline>How to connect to Compliance PowerShell behind a Proxy</div>
+        <div class=headline>Connect to Compliance PowerShell behind a Proxy</div>
 	      <div class=datestamp>31-Mar-23</div>
         <div class=content><br>
 	Having to use a proxy can cause a lot extra issues when connecting to PowerShell. For the Compliance PowerShell there is at least a workaround:<br>
