--- a/sensitivityLabelError.html
+++ b/sensitivityLabelError.html
@@ -107,7 +107,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		Additionally the labels are present if we install the legacy Azure Information Protection (AIP) add-in, but as that will be phased out there didn't seem much point in using this as a workaround.<br>
 		<br>
 		<b>References</b><br>
-	      <a href='https://learn.microsoft.com/en-us/microsoft-365/troubleshoot/sensitivity-labels/sensitivity-labels-missing'> Microsoft KB articel><a/><br>
+	      <a href='https://learn.microsoft.com/en-us/microsoft-365/troubleshoot/sensitivity-labels/sensitivity-labels-missing'> Microsoft KB article></a><br>
          <br><br>
            
           </div>
