--- a/sensitivityLabelError.html
+++ b/sensitivityLabelError.html
@@ -108,7 +108,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
 		<b>References</b><br>
 	      <a href='https://learn.microsoft.com/en-us/microsoft-365/troubleshoot/sensitivity-labels/sensitivity-labels-missing'> Microsoft KB article></a><br>
-         <br><br>
+       	      <a href='https://techcommunity.microsoft.com/t5/exchange-team-blog/using-label-policy-rules-to-troubleshoot-label-issues/ba-p/3070314#:~:text=If%20the%20policy%20shows%20Pending,we%20recommend%20contacting%20Microsoft%20support.'>Microsoft - Sensitivity labels are missing in Outlook</a><br>
+		<br><br>
            
           </div>
           
