--- a/sensitivityLabelError.html
+++ b/sensitivityLabelError.html
@@ -106,6 +106,11 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
 		Additionally the labels are present if we install the legacy Azure Information Protection (AIP) add-in, but as that will be phased out there didn't seem much point in using this as a workaround.<br>
 		<br>
+		<b>Solution</b><br>
+		In this case we found that although we had enabled the 'Information Protection for Office365 - Premium' we also needed to enable the 'Standard' feature alongside it.<br>
+		  <br>
+ 	<img src=sensitivityLabelError03.png class=imageMain><div class=imageCaption>↑ Both Information Protection features need to be enabled for O365 users.</div><br>
+		<br>
 		<b>References</b><br>
 	      <a href='https://learn.microsoft.com/en-us/microsoft-365/troubleshoot/sensitivity-labels/sensitivity-labels-missing'>Microsoft KB article</a><br>
        	      <a href='https://techcommunity.microsoft.com/t5/exchange-team-blog/using-label-policy-rules-to-troubleshoot-label-issues/ba-p/3070314#:~:text=If%20the%20policy%20shows%20Pending,we%20recommend%20contacting%20Microsoft%20support.'>Microsoft - Sensitivity labels are missing in Outlook</a><br>
