--- a/sensitivityLabelError.html
+++ b/sensitivityLabelError.html
@@ -106,8 +106,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
 		Additionally the labels are present if we install the legacy Azure Information Protection (AIP) add-in, but as that will be phased out there didn't seem much point in using this as a workaround.<br>
 		<br>
-		<b>Solution</b><br>
-		In this case we found that although we had enabled the 'Information Protection for Office365 - Premium' we also needed to enable the 'Standard' feature alongside it.<br>
+		<b>Solution:</b> in this case we found that although we had enabled the 'Information Protection for Office365 - Premium' we also needed to enable the 'Standard' feature alongside it.<br>
 		  <br>
  	<img src=sensitivityLabelError03.png class=imageMain><div class=imageCaption>↑ Both Information Protection features need to be enabled for O365 users.</div><br>
 		<br>
