--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
 	<a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a><br>
 	<a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a><br>
@@ -99,6 +100,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      
 	      <div class=headline>Articles</div>
 	      <table class=indexTable>
+	<tr><td><a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a></td><td>23-Jun-23</td></tr>
 	<tr><td><a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a></td><td>31-Mar-23</td></tr>
 	<tr><td><a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a></td><td>29-Mar-23</td></tr>
 	<tr><td><a href="roomFinderError.html" class=two>Room Finder Error in Outlook</a></td><td>28-Mar-23</td></tr>
