--- a/exchangeCertRenew.html
+++ b/exchangeCertRenew.html
@@ -14,7 +14,10 @@
 h1 {
         margin-top: 0px;
     }
-	    
+
+	    ul {
+  list-style-position: outside;
+}
 	  
       .dropdown {
   position: relative;
