--- a/exchangeCertRenew.html
+++ b/exchangeCertRenew.html
@@ -116,7 +116,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
 			<li> After this you must rerun the Exchange Hybrid Wizard, which now requires the credentials of a Cloud Admin.<br></li>
 		<br>
-			<li> With the HCW run you now go to delete the old cert that is about to expire, but an error message comes up to say it is still in use. This is because the HCW goes oon the cert names and not the thumbprint. To get around this delete the old cert via the Certificates.mmc snap-in.<br></li>
+			<li> With the HCW run you now go to delete the old cert that is about to expire, but an error message comes up to say it is still in use. This is because the HCW goes on the cert names and not the thumbprint. To get around this delete the old cert via the Certificates.mmc snap-in.<br></li>
                 <br>
 			<li> When you reboot the Exchange server at a later date the Exchange Management Shell will fail to connect. This is because the back-end website no longer has a certificate selected under 'Bindings'.</li>
        		</ol>   
