--- a/exchangeCertRenew.html
+++ b/exchangeCertRenew.html
@@ -105,7 +105,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
          <div class=headline>Renewing an Exchange 2016 certificate</div>
 	      <div class=datestamp>23-Jun-23</div>
         <div class=content><br>
-       Renewing a 3rd party Exchange certificate really shouldn't be a big deal but thanks to SSL comapnies and Microsoft there are a number of problems that can occur.<br>
+       Renewing a 3rd party Exchange certificate really shouldn't be a big deal but thanks to SSL companies and Microsoft there are a number of problems that can occur.<br>
 		<br>
 		<ol>
 		<li> The cert comes as a text file along with a root cert and two intermediary certs, all of which must be installed. The guides showing to use ECP are not valid as you can now only do this via Exchange PowerShell.<Br></li>
@@ -116,7 +116,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
 			<li> After this you must rerun the Exchange Hybrid Wizard, which now requires the credentials of a Cloud Admin.<br></li>
 		<br>
-			<li> With the HCW run you now go to delete the old cert that is about to expire, but an error message comes up to say it is still in use. This is because the HCW goes on the cert names and not the thumbprint. To get around this delete the old cert via the Certificates.mmc snap-in.<br></li>
+			<li> With the HCW run, you now go to delete the old cert that is about to expire, but an error message comes up to say it is still in use. This is because the HCW goes on the cert names and not the thumbprint. To get around this delete the old cert via the Certificates.mmc snap-in.<br></li>
                 <br>
 			<li> When you reboot the Exchange server at a later date the Exchange Management Shell will fail to connect. This is because the back-end website no longer has a certificate selected under 'Bindings'.</li>
        		</ol>   
