--- a/links.html
+++ b/links.html
@@ -103,7 +103,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='http://terenceluk.blogspot.com/'>Terence Luk</a></td><td style='font-size 12px;align:left;' class=tableContent>Good insites into Exchange and NetScaler, also has articles on Teams.</td></tr>
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://blog.joeware.net/'>Joeware</a></td><td style='font-size 12px;' class=tableContent>Insights into AD.</td></tr>
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://mikecrowley.us/'>Mike Crowley MVP</a></td><td style='font-size 12px;' class=tableContent>PowerShell scripts for Azure and O365.</td></tr>
-		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://rakhesh.com/'>Rackhesh.com</a></td><td style='font-size 12px;' class=tableContent>Various articles on Azure.</td></tr>
+		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://rakhesh.com/'>Rakhesh.com</a></td><td style='font-size 12px;' class=tableContent>Various articles on Azure.</td></tr>
 
 		   
 		   
