--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
      
 	      
 	      <div class=headline>Articles</div>
-	      <table class=indexTable>
+	      <table class=indexTable> 
+	<tr><td><a href="recreatePublicFolder.html" class=two>Recreating Public Folders in Exchange Online</a></td><td>11-Oct-23</td></tr>
 	<tr><td><a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a></td><td>23-Jun-23</td></tr>
 	<tr><td><a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a></td><td>31-Mar-23</td></tr>
 	<tr><td><a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a></td><td>29-Mar-23</td></tr>
