--- a/recreatePublicFolder.html
+++ b/recreatePublicFolder.html
@@ -107,7 +107,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
          <div class=headline>Recreate Public Folders in Exchange Online</div>
 	      <div class=datestamp>11-Oct-23</div>
         <div class=content><br>
-    For some reason after migrating public folders to Office365 the cliet permissions would not take affect for users despite it showing as set in the admin console. As there were only a few public folders, 
+    For some reason after migrating public folders to Office365 the client permissions would not take affect for users despite it showing as set in the admin console. As there were only a few public folders, 
 		used mainly for shared address books, I didn't want to spend too much time troubleshooting the issue.<br>
 <br>
 	I decided to export the information in the public folders to my own shared mailbox, then delete the public folders and public folder hierarchy and then rectreate them in Office 365 alone. However, 
